--- a/students/linov_mykhailo/14_svg_mixins/src/css/_variables.scss
+++ b/students/linov_mykhailo/14_svg_mixins/src/css/_variables.scss
@@ -12,9 +12,14 @@ $default-font-name: 'Montserrat';
 $fallback: Arial, Helvetica, sans-serif;
 $main-font: $default-font-name, $fallback;
 $button-font-name: 'Poppins';
-$button-font: $title-font-name, $fallback;
+$button-font: $button-font-name, $fallback;
+$gotham-font-name: 'Figtree';
+$gotham-font: $gotham-font-name, $fallback;
 $font-path: './fonts/';
 
 //containers
-$container-padding: 121px 135px 122px;
-$container-max-width: 1170px;
+$container-max-width: 1200px;
+$container-padding: 15px;
+$gap: 15px;
+$defaulp-count-col: 12;
+$default-width: 1200px;
