--- a/students/linov_mykhailo/14_svg_mixins/src/css/_mixins.scss
+++ b/students/linov_mykhailo/14_svg_mixins/src/css/_mixins.scss
@@ -1,8 +1,41 @@
 @mixin font-face($_font-name, $_font-weight: 500, $_font-style: normal, $_font-family: $default-font-name) {
     @font-face {
-        font-family: $default-font-name;
+        font-family: $_font-family;
         font-style: $_font-style;
         font-weight: $_font-weight;
         src: url('#{$font-path}#{$_font-name}.woff2') format('woff2');
+    }
+}
+
+@mixin container {
+    .container {
+        max-width: $default-width;
+        margin: 0 auto;
+        padding: 0 $gap;
+    }
+}
+
+@mixin grid($count: 12) {
+    @include container;
+
+    .row {
+        display: flex;
+        flex-wrap: wrap;
+        margin: 0 (-$gap);
+    }
+
+    [class*="col-"] {
+        padding: $gap;
+        box-sizing: border-box;
+    }
+
+    @for $i from 1 through $count {
+        $width: calc(100% / $count * $i);
+
+        .col-#{$i} {
+            max-width: $width;
+            width: 100%;
+            flex-basis: $width;
+        }
     }
 }
