edit css for header

--- a/students/linov_mykhailo/14_svg_mixins/src/css/header/_menu.scss
+++ b/students/linov_mykhailo/14_svg_mixins/src/css/header/_menu.scss
@@ -1,1 +1,9 @@
+.menu {
+    @include flex;
+    gap: 20px;
+    font-weight: normal;
 
+    &__item>a:hover {
+        color: $color-orange;
+    }
+}
