--- a/students/linov_mykhailo/14_svg_mixins/src/css/_global.scss
+++ b/students/linov_mykhailo/14_svg_mixins/src/css/_global.scss
@@ -6,15 +6,27 @@
 @include font-face('figtree-v4-latin-700', 700, normal, $gotham-font-name);
 
 body {
-    font-family: $main-font;
+    font-weight: 500;
     background-color: $default-body-color;
+    color: $color-text;
+}
+
+body,
+a {
+    font-family: $main-font;
+    font-size: 16px;
 }
 
 @include grid;
 
+
+
 a {
     text-decoration: none;
+    color: $color-text;
 }
+
+
 
 section {
     padding-bottom: 100px;
