--- a/students/linov_mykhailo/14_svg_mixins/src/css/header/_buttons.scss
+++ b/students/linov_mykhailo/14_svg_mixins/src/css/header/_buttons.scss
@@ -1,1 +1,20 @@
+.white-button,
+.orange-button {
+    width: 110px;
+    height: 46px;
+    font-weight: 600;
+    border-radius: 4px;
+}
 
+.white-button {
+    color: $color-title;
+    background-color: $default-body-color;
+    border: 1px solid $color-placeholder;
+    margin-right: 32px;
+}
+
+.orange-button {
+    color: $default-body-color;
+    background-color: $color-orange;
+    border: 1px solid $color-orange;
+}
