the path to the icon has been changed

--- a/students/dunaieva_alona/13_preprocessor/src/css/_global.scss
+++ b/students/dunaieva_alona/13_preprocessor/src/css/_global.scss
@@ -27,7 +27,7 @@ h1::after {
 
 h1::before {
     content: '';
-    background: url(../../images/bonfire-sharp.svg) no-repeat center;
+    background: url(../images/bonfire-sharp.svg) no-repeat center;
     position: absolute;
     min-width: 20px;
     min-height: 20px;
