--- a/students/dunaieva_alona/13_preprocessor/src/css/sections/_our-team.scss
+++ b/students/dunaieva_alona/13_preprocessor/src/css/sections/_our-team.scss
@@ -52,7 +52,7 @@
     }
     &__parg::after {
         content: '';
-        background: url(../../images/dotted_line.svg);
+        background: url(../images/dotted_line.svg);
         position: absolute;
         width: 50px;
         height: 4px;
