--- a/students/tiselko_iryna/14_mixins/src/css/header/_header.scss
+++ b/students/tiselko_iryna/14_mixins/src/css/header/_header.scss
@@ -1,32 +1,54 @@
-.menu {
+.header {
+    margin-bottom: 70px;
+}
 
+.menu {
     // .menu__block
 
-    &__block {}
-
-    // .menu__item
-
-    &__item {}
+    &__block {
+        @include flex;
+        align-items: center;
+    }
 
     // .menu__links
 
-    &__links {}
+    &__links {
+        color: $color-darkgray;
+
+        &:hover {
+            color: $color-orange;
+        }
+    }
 
     // .menu__btn
 
-    &__btn {}
+    &__btn {
+        @include flexvariables (flex-start, center, row-reverse)
+    }
 }
 
 .up {
-
+    padding-left: 16px;
     // .up__btn
 
-    &__btn {}
+    &__btn {
+        @include border (none, $color-orange);
+        width: 110px;
+        height: 46px;
+        border-radius: 4px;
+        color: $color-white;
+    }
 }
 
 .in {
-
+    padding-right: 16px;
     // .in__btn
 
-    &__btn {}
+    &__btn {
+        @include border ();
+        width: 110px;
+        height: 46px;
+        border-radius: 4px;
+        color: $color-darkgray;
+    }
 }
