--- a/students/motkaliuk_andrii/15_forms/src/css/_main.scss
+++ b/students/motkaliuk_andrii/15_forms/src/css/_main.scss
@@ -8,6 +8,8 @@ input,
 textarea {
     font-family: inherit;
     font-size: inherit;
+    line-height: inherit;
+    color: inherit;
 }
 
 input[type="text"],
