--- a/students/linov_mykhailo/14_svg_mixins/src/css/style.scss
+++ b/students/linov_mykhailo/14_svg_mixins/src/css/style.scss
@@ -1,6 +1,8 @@
-@import "./reset";
 @import "./normalize";
+@import "./reset";
 @import "./variables";
 @import "./mixins";
 @import "./global";
 @import "./header/header";
+@import "./main/main";
+@import "./footer/footer";
