--- a/students/linov_mykhailo/14_svg_mixins/src/css/main/_superpowers.scss
+++ b/students/linov_mykhailo/14_svg_mixins/src/css/main/_superpowers.scss
@@ -14,4 +14,6 @@ h4 {
 .bg-cemicercle {
     background-image: url(../../images/svg/bg.svg);
     background-repeat: no-repeat;
+    background-position: bottom 60px center;
+    background-size: cover;
 }
