--- a/students/kukuruza_maxim/13_scss/src/css/style.scss
+++ b/students/kukuruza_maxim/13_scss/src/css/style.scss
@@ -64,7 +64,7 @@ h1 {
     font-size: 60px;
     margin-top: 15px;
 
-    &:after {
+    &::after {
         content: "";
         position: absolute;
         display: block;
@@ -105,23 +105,23 @@ h4 {
     padding: 15px;
     border: 1px solid $gold;
 
-    &:before {
+    &::before {
         content: "";
         display: block;
         position: absolute;
         left: 22%;
         z-index: 1;
-        top: 285px;
+        top: 295px;
         width: 230px;
         height: 440px;
         background-color: white;
     }
 
-    &:after {
+    &::after {
         content: "";
         display: block;
         position: absolute;
-        left: 15%;
+        left: 17%;
         z-index: 1;
         top: 380px;
         height: 230px;
@@ -134,7 +134,7 @@ h2 {
 
     font-size: 36px;
 
-    &:after {
+    &::after {
         content: "";
         display: block;
         width: 100px;
@@ -166,7 +166,7 @@ h3 {
 
 
 
-    &:before {
+    &::before {
         content: "";
         display: block;
         background-color: $gold;
@@ -175,7 +175,7 @@ h3 {
         margin-left: -15px;
     }
 
-    &:after {
+    &::after {
         content: "";
         display: block;
         background-color: $gold;
