--- a/students/hridina_anastasiia/13_postprocessors/src/css/_global.scss
+++ b/students/hridina_anastasiia/13_postprocessors/src/css/_global.scss
@@ -44,16 +44,17 @@ body {
 .row {
     display: flex;
     align-items: center;
+    justify-content: center;
 }
 
 .col-12 {
-    max-width: 1170px;
-    width: 100%;
+    max-width: $container-max-width;
     padding: $container-padding;
 }
 
 .col-6 {
-    max-width: 1030px;
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: space-between;
     width: 100%;
-    padding-left: 85px;
 }
