--- a/students/hridina_anastasiia/13_postprocessors/src/css/main/_image.scss
+++ b/students/hridina_anastasiia/13_postprocessors/src/css/main/_image.scss
@@ -3,6 +3,8 @@
     width: 430px;
     height: 430px;
     position: relative;
+    top: 70px;
+    left: 45px;
 }
 
 .wrapper::before,
@@ -25,8 +27,8 @@
 
 .image {
     position: absolute;
-    width: 100%;
-    height: 100%;
-    padding: 20px;
+    top: 18px;
+    left: 18px;
+    border: 1px solid $color-gold;
     z-index: 1;
 }
