--- a/students/motkaliuk_andrii/10_css_box_model/productly/css/styles.css
+++ b/students/motkaliuk_andrii/10_css_box_model/productly/css/styles.css
@@ -3,23 +3,16 @@ body {
     color: #2F281E;
 }
 
-.site_container {
-    display: block;
-    margin: 0 auto;
-    max-width: 1440px;
-    width: 100%;
-    padding: 0 120px;
-    box-sizing: border-box;
-}
-
 .header_container {
-    display: inline-block;
+    display: block;
     font-size: 0px;
-    max-width: 1200px;
+    max-width: 1230px;
     width: 100%;
+    padding: 0 15px;
+    margin: 0 auto;
 }
 
-.emblem {
+.logo {
     display: inline-block;
     text-align: left;
     vertical-align: top;
@@ -57,50 +50,44 @@ body {
     color: #F90;
 }
 
-.sign_in_up {
+.sign-in-up {
     display: inline-block;
+    padding-left: 190px;
 }
 
-.sign_in {
-    display: inline-block;
-    padding-left: 197px;
-}
-
-.sign_in_button {
-    height: 46px;
-    width: 110px;
+[class$="_button"] {
+    text-decoration: none;
+    font-size: 16px;
+    font-weight: 600;
     font-family: 'Montserrat', Arial, Helvetica, sans-serif;
-    color: #2F281E;
-    background-color: #FFF;
     border-radius: 4px;
     border: 1px solid #BCD0E5;
+}
+
+.sign-in_button {
+    color: #2F281E;
+    background-color: #FFF;
+    border: 1px solid #BCD0E5;
+    padding: 13px 25px;
+}
+
+.sign-up_button {
+    color: #FFF;
     font-size: 16px;
-    font-style: normal;
-    font-weight: 600;
-}
-
-.sign_up {
-    display: inline-block;
-    padding-left: 32px;
-}
-
-.sign_up_button {
-    height: 46px;
-    width: 110px;
-    font-family: 'Montserrat', Arial, Helvetica, sans-serif;
     background-color: #F90;
     border-radius: 4px;
     border: 1px solid #F90;
-    color: #FFF;
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 600;
+    padding: 13px 25px;
+    margin-left: 32px;
 }
 
 .footer_container {
+    display: block;
     font-size: 0px;
-    max-width: 1200px;
+    max-width: 1230px;
     width: 100%;
+    padding: 0 15px;
+    margin: 0 auto;
 }
 
 .footer_icon,
@@ -142,8 +129,8 @@ body {
     padding-top: 20px;
 }
 
-.quick_links>ul,
-.legal_stuff>ul {
+.quick_links_block ul,
+.legal_stuff_block ul {
     padding-top: 20px;
 }
 
@@ -165,9 +152,10 @@ body {
 }
 
 .input_space {
+    margin-top: 25px;
     width: 320px;
     height: 50px;
-    color: #BCD0E5;
+    font-family: inherit;
     font-size: 16px;
     font-style: normal;
     font-weight: 400;
@@ -177,11 +165,12 @@ body {
     border: 1px solid #BCD0E5;
 }
 
-.footer_button_box {
-    padding-top: 20px;
+.input_space::placeholder {
+    color: #BCD0E5;
 }
 
-.footer_button {
+input[type="submit"] {
+    margin-top: 20px;
     width: 180px;
     height: 50px;
     color: #FFF;
