--- a/students/motkaliuk_andrii/13_pre_post_processors/src/css/main/_photo.scss
+++ b/students/motkaliuk_andrii/13_pre_post_processors/src/css/main/_photo.scss
@@ -5,25 +5,27 @@
     position: relative;
     padding-top: 65px;
 
-    &::before {
-        content: "";
-        position: absolute;
-        left: calc(50% - 115px);
-        top: -1px;
-        bottom: -1px;
-        width: 230px;
-        background-color: $default-body-color;
-    }
+    // &::before {
+    //     content: "";
+    //     position: absolute;
+    //     left: calc(50% - 115px);
+    //     top: -1px;
+    //     bottom: -1px;
+    //     width: 230px;
+    //     background-color: $default-body-color;
+    // }
 
-    &::after {
-        content: "";
-        position: absolute;
-        left: -1px;
-        right: -1px;
-        top: 170px;
-        bottom: 100px;
-        background-color: $default-body-color;
-    }
+    // &::after {
+    //     content: "";
+    //     position: absolute;
+    //     left: -1px;
+    //     right: -1px;
+    //     top: 170px;
+    //     bottom: 100px;
+    //     width: 600px;
+    //     // background-color: $default-body-color;
+    //     background-color: red
+    // }
 }
 
 .hero-photo {
@@ -33,6 +35,25 @@
     border: 1px solid $color-gold;
     justify-content: center;
     align-items: center;
+
+    &::before {
+        content: "";
+        position: absolute;
+        width: 230px;
+        height: 432px;
+        margin: 0 auto;
+        background-color: $default-body-color;
+    }
+
+    &::after {
+        content: "";
+        position: absolute;
+        top: 170px;
+        bottom: 100px;
+        margin: 0 auto;
+        width: 432px;
+        background-color: $default-body-color;
+    }
 }
 
 .hero-img {
