--- a/students/motkaliuk_andrii/13_pre_post_processors/src/css/main/_photo.scss
+++ b/students/motkaliuk_andrii/13_pre_post_processors/src/css/main/_photo.scss
@@ -1,40 +1,15 @@
-.wrapper {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: relative;
-    padding-top: 65px;
-
-    // &::before {
-    //     content: "";
-    //     position: absolute;
-    //     left: calc(50% - 115px);
-    //     top: -1px;
-    //     bottom: -1px;
-    //     width: 230px;
-    //     background-color: $default-body-color;
-    // }
-
-    // &::after {
-    //     content: "";
-    //     position: absolute;
-    //     left: -1px;
-    //     right: -1px;
-    //     top: 170px;
-    //     bottom: 100px;
-    //     width: 600px;
-    //     // background-color: $default-body-color;
-    //     background-color: red
-    // }
-}
-
 .hero-photo {
     display: flex;
-    height: 430px;
-    width: 430px;
+    max-height: 430px;
+    height: 100%;
+    max-width: 430px;
+    width: 100%;
     border: 1px solid $color-gold;
     justify-content: center;
     align-items: center;
+    position: relative;
+    margin: 0 auto;
+    margin-top: 65px;
 
     &::before {
         content: "";
@@ -48,7 +23,7 @@
     &::after {
         content: "";
         position: absolute;
-        top: 170px;
+        top: 100px;
         bottom: 100px;
         margin: 0 auto;
         width: 432px;
@@ -57,6 +32,7 @@
 }
 
 .hero-img {
+    border: 1px solid $color-gold;
     z-index: 3;
 }
 
