--- a/students/motkaliuk_andrii/13_pre_post_processors/src/css/main/_title.scss
+++ b/students/motkaliuk_andrii/13_pre_post_processors/src/css/main/_title.scss
@@ -1,20 +1,3 @@
-.title {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    position: relative;
-
-    &::after {
-        content: "";
-        position: absolute;
-        max-width: 440px;
-        width: 100%;
-        height: 1px;
-        background-color: $color-gold;
-        bottom: 10px;
-    }
-}
-
 .title-description {
     width: 100%;
     text-align: center;
@@ -35,20 +18,28 @@
     margin: 0;
     padding: 25px 0 55px 0;
     position: relative;
-}
-
-.pseudo {
-    position: relative;
     margin-bottom: 40px;
+
+    &::before {
+        content: "";
+        position: absolute;
+        left: calc(50% - 10px);
+        top: 120px;
+        background-color: $default-body-color;
+        width: 20px;
+        height: 20px;
+        background-image: url(../images/bonfire_sharp.svg);
+        z-index: 2;
+    }
 
     &::after {
         content: "";
         position: absolute;
-        left: calc(50% - 10px);
-        top: -20px;
-        background-color: $default-body-color;
-        width: 20px;
-        height: 20px;
-        background-image: url(images/bonfire_sharp.svg);
+        max-width: 440px;
+        width: 100%;
+        height: 1px;
+        background-color: $color-gold;
+        bottom: 10px;
+        left: calc(50% - 220px);
     }
 }
