--- a/students/motkaliuk_andrii/15_forms/src/css/_main.scss
+++ b/students/motkaliuk_andrii/15_forms/src/css/_main.scss
@@ -34,3 +34,8 @@ input[type="radio"]+label {
     width: 100%;
     justify-content: space-between;
 }
+
+button {
+    width: 200px;
+    height: 30px;
+}
