--- a/students/hridina_anastasiia/14_postprocessors/src/css/_global.scss
+++ b/students/hridina_anastasiia/14_postprocessors/src/css/_global.scss
@@ -7,14 +7,13 @@ body {
     //background-color: $default-body-color;
 }
 
+section {
+    padding-bottom: 100px;
+}
+
 .container {
     max-width: $container-max-width;
     padding: $container-padding;
-}
-
-.row {
-    padding-top: 100px;
-
 }
 
 @include grid();
