--- a/students/hridina_anastasiia/14_postprocessors/src/css/header/_buttons.scss
+++ b/students/hridina_anastasiia/14_postprocessors/src/css/header/_buttons.scss
@@ -1,20 +1,18 @@
-.buttons__right {
-    display: inline-flex;
-    gap: 32px;
-}
-
 .sign__in {
     border: 1px solid $color-lightblue;
     background-color: $color-white;
     color: $color-black;
+    text-decoration: none;
     border-radius: 4px;
     padding: 13px 25px;
-    width: 110px;
-    height: 46px;
     font-size: 16px;
     font-weight: 600;
+    text-align: center;
+    width: 110px;
+    height: 46px;
     transition-duration: .4s;
     cursor: pointer;
+    margin-right: 32px;
 
     &:hover {
         background-color: $color-lightblue;
@@ -25,20 +23,10 @@
 }
 
 .sign__up {
-    border: none;
-    background-color: $color-orange;
-    color: $color-white;
-    border-radius: 4px;
-    font-size: 16px;
+    @include button-orng;
+    padding: 13px 25px;
     font-weight: 600;
-    transition-duration: .4s;
-    cursor: pointer;
     width: 110px;
     height: 46px;
-
-    &:hover {
-        background-color: gold;
-        color: $color-white;
-        border: none;
-    }
+    text-decoration: none;
 }
