--- a/students/hridina_anastasiia/14_postprocessors/src/css/header/_header.scss
+++ b/students/hridina_anastasiia/14_postprocessors/src/css/header/_header.scss
@@ -3,8 +3,10 @@
 @import "./buttons";
 
 .header {
+
+    padding: 15px;
+
     .container {
         @include flex;
-        padding: $container-padding;
     }
 }
