--- a/students/hridina_anastasiia/14_postprocessors/src/css/main/_buttons_main.scss
+++ b/students/hridina_anastasiia/14_postprocessors/src/css/main/_buttons_main.scss
@@ -4,12 +4,25 @@
 
 .button__left {
     padding-top: 20px;
+
+    & .button__start {
+        @include button-orng;
+    }
 }
 
 .button__center {
-    padding-top: 50px;
+
+    padding-top: 70px;
     text-align: center;
+
+    & .button__cntr {
+        @include button-orng;
+        text-decoration: none;
+        color: $color-white;
+    }
+
 }
+
 
 .button__now {
     @include button-orng;
