--- a/students/hridina_anastasiia/14_postprocessors/src/css/main/_heading.scss
+++ b/students/hridina_anastasiia/14_postprocessors/src/css/main/_heading.scss
@@ -1,95 +1,75 @@
-.heading {
+.heading__left {
 
-    h2 {
-        padding-top: 50px;
-        color: $color-darkgray;
-        font-size: 44px;
-        font-weight: 700;
-        line-height: 54px;
-    }
+    padding-top: 50px;
+    color: $color-darkgray;
+    font-size: 44px;
+    font-weight: 700;
+    line-height: 54px;
+}
 
-    p {
-        color: $color-lightgray;
-        font-size: 18px;
-        font-weight: 400;
-        line-height: 28px;
-    }
+.text__left {
+    color: $color-lightgray;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 28px;
 }
 
 .heading__center {
     text-align: center;
+    font-size: 36px;
+    font-weight: 700;
 
-    h2 {
-        font-size: 36px;
-        font-weight: 700;
-    }
 }
 
-.heading__benefits {
+.validation,
+.validation__text {
+    margin: 0;
+    color: $color-lightgray;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 26px;
 
-    & p:first-child {
-        margin: 0;
-    }
-
-    p {
-        color: $color-lightgray;
-        font-size: 16px;
-        font-weight: 500;
-        line-height: 26px;
-    }
-
-    h2 {
-        color: $color-darkgray;
-        font-size: 36px;
-        font-weight: 700;
-        line-height: normal;
-        margin-top: 0;
-    }
 }
 
-.heading__managers {
-    display: flex;
-    flex-direction: column;
-    padding-left: 100px;
-
-
-    & p:first-child {
-        margin: 0;
-    }
-
-    p {
-        color: $color-lightgray;
-        font-size: 16px;
-        font-weight: 500;
-        line-height: 26px;
-    }
-
-    h2 {
-        color: $color-darkgray;
-        font-size: 36px;
-        font-weight: 700;
-        margin-top: 0;
-    }
+.professionals {
+    color: $color-darkgray;
+    font-size: 36px;
+    font-weight: 700;
+    line-height: normal;
+    margin-top: 0;
 }
 
-.heading__marketers {
 
-    & p:first-child {
-        margin: 0;
-    }
+.managers__toptext,
+.managers__text {
+    margin: 0;
+    color: $color-lightgray;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 26px;
+}
 
-    p {
-        color: $color-lightgray;
-        font-size: 16px;
-        font-weight: 500;
-        line-height: 26px;
-    }
+.managers__heading {
+    color: $color-darkgray;
+    font-size: 36px;
+    font-weight: 700;
+    margin-top: 0;
+}
 
-    h2 {
-        color: $color-darkgray;
-        font-size: 36px;
-        font-weight: 700;
-        line-height: normal;
-        margin-top: 0;
-    }
+
+.marketers__toptext,
+.marketers__text {
+    margin: 0;
+    color: $color-lightgray;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 26px;
+}
+
+.marketers__heading {
+    color: $color-darkgray;
+    font-size: 36px;
+    font-weight: 700;
+    line-height: normal;
+    margin-top: 0;
 }
