--- a/students/hridina_anastasiia/14_postprocessors/src/css/main/_images.scss
+++ b/students/hridina_anastasiia/14_postprocessors/src/css/main/_images.scss
@@ -5,12 +5,16 @@
 }
 
 .image__professionals {
+    padding-left: 60px;
+
     img {
         width: 100%;
     }
 }
 
 .image__managers {
+    padding-right: 60px;
+
     img {
         width: 100%;
     }
@@ -24,6 +28,7 @@
 }
 
 .image__marketers {
+    padding-left: 60px;
 
     img {
         width: 100%;
