--- a/students/hridina_anastasiia/11_flexbox/css/style.css
+++ b/students/hridina_anastasiia/11_flexbox/css/style.css
@@ -22,6 +22,13 @@
     src: url('fonts/montserrat-v25-latin-700.woff2') format('woff2');
 }
 
+body {
+    font-family: 'Montserrat';
+}
+
+section {
+    padding-top: 100px;
+}
 
 .container {
     max-width: 1200px;
@@ -125,8 +132,6 @@ p {
     background-position-y: bottom;
     background-position-x: center;
     background-size: cover;
-    height: 100%;
-    overflow: hidden;
 }
 
 h2 {
@@ -253,13 +258,17 @@ input::placeholder {
 }
 
 .button5 {
-    width: 180px;
+    width: 190px;
     height: 50px;
     padding: 13px 40px;
     border-radius: 4px;
+    border: none;
+    font-size: 16px;
+    font-family: 'Montserrat';
     background: orange;
     color: white;
     text-decoration: none;
+    cursor: pointer;
 }
 
 .input__button {
