--- a/students/hridina_anastasiia/13_postprocessors/src/css/main/_info.scss
+++ b/students/hridina_anastasiia/13_postprocessors/src/css/main/_info.scss
@@ -1,16 +1,16 @@
+.line {
+    &::before {
+        content: '';
+        border-left: 1px solid $color-gold;
+        height: 560px;
+        position: absolute;
+    }
+}
+
 .info {
     position: relative;
     top: 70px;
     left: 50px;
-
-    &::before {
-        content: '';
-        border-left: 1px solid $color-gold;
-        position: absolute;
-        height: 560px;
-        top: -70px;
-        left: -50px;
-    }
 }
 
 .fullname {
@@ -69,26 +69,24 @@
     position: relative;
     left: 70px;
 
-    &::before,
     &::after {
         content: '';
         position: absolute;
-        border: 4px solid $color-gold;
-        width: 10px;
-        height: 4px;
-        top: 138px;
-        left: 170px;
-        right: 200px;
+        border-bottom: 4px solid $color-gold;
+        width: 20px;
+        top: 135px;
+        right: 204px;
+        border-left: 4px solid $color-white;
+        border-right: 4px solid $color-white;
     }
 
     &::before {
         content: '';
         position: absolute;
         border-bottom: 4px solid $color-gold;
-        width: 20px;
-        height: 4px;
-        top: 138px;
-        left: 190px;
+        width: 50px;
+        top: 135px;
+        left: 191px;
     }
 
 }
@@ -99,7 +97,7 @@
     padding-top: 50px;
 }
 
-button {
+.button__profile {
     text-align: center;
     color: $color-gray;
     font-family: 'Open Sans', $fallback;
