--- a/students/hridina_anastasiia/14_postprocessors/src/css/footer/_footer_blocks.scss
+++ b/students/hridina_anastasiia/14_postprocessors/src/css/footer/_footer_blocks.scss
@@ -1,11 +1,14 @@
 .block__one,
 .block__two {
-    padding-left: 40px;
+    display: flex;
+    flex-direction: column;
+    padding-left: 30px;
 }
 
 .block__one h4,
 .block__two h4 {
     margin-top: 0;
+    padding-bottom: 30px;
     font-size: 20px;
     font-weight: 700;
     line-height: 30px;
