--- a/students/hridina_anastasiia/14_postprocessors/src/css/main/_benefits.scss
+++ b/students/hridina_anastasiia/14_postprocessors/src/css/main/_benefits.scss
@@ -7,14 +7,14 @@
     gap: 30px;
 
 
-    &__items {
+    & .benefits__items {
         color: $color-darkgray;
         font-size: 16px;
         font-weight: 700;
         line-height: 26px;
+        padding-bottom: 10px;
 
-
-        & p {
+        p {
             color: $color-lightgray;
             font-size: 16px;
             font-weight: 500;
