--- a/students/hridina_anastasiia/14_postprocessors/src/css/main/_marketers.scss
+++ b/students/hridina_anastasiia/14_postprocessors/src/css/main/_marketers.scss
@@ -6,7 +6,7 @@
     flex-direction: column;
     gap: 30px;
 
-    &__item {
+    & .marketers__item {
         color: $color-darkgray;
         font-size: 16px;
         font-weight: 700;
