--- a/students/hridina_anastasiia/14_postprocessors/src/css/main/_myspace.scss
+++ b/students/hridina_anastasiia/14_postprocessors/src/css/main/_myspace.scss
@@ -7,6 +7,7 @@
         padding-bottom: 30px;
         display: flex;
         align-items: center;
+        line-height: 26px;
 
         img {
             padding-right: 30px;
@@ -19,4 +20,8 @@
             line-height: 26px;
         }
     }
+}
+
+.myspace {
+    padding-left: 110px;
 }
