--- a/students/havrylova_kateryna/17/src/css/style.scss
+++ b/students/havrylova_kateryna/17/src/css/style.scss
@@ -3,6 +3,5 @@
 @import "./mixins";
 @import "./global";
 @import "./extend";
-@import "./form-control";
-@import "./social-list";
-@import "./message";
+@import "./grid";
+@import "./blog";
