--- a/students/havrylova_kateryna/16/src/css/_social-list.scss
+++ b/students/havrylova_kateryna/16/src/css/_social-list.scss
@@ -7,6 +7,9 @@ $label-item-bg: $white-color;
     &__input {
         @include social-item(facebook);
         @include social-item(instagram);
+        @include social-item(linkedin);
+        @include social-item(google);
+        @include social-item(twitter);
         // &[name="facebook"]:checked~.social-list__row {
         //     .social-list__item_facebook {
         //         opacity: 1;
@@ -57,6 +60,7 @@ $label-item-bg: $white-color;
         flex-direction: row-reverse;
         opacity: .4;
         transition: opacity .3s ease-in-out;
+        margin-bottom: 5px;
 
         // .social-list__item_facebook
 
@@ -91,6 +95,7 @@ $label-item-bg: $white-color;
         transform: translateX(-100%);
         opacity: .4;
         transition: opacity .3s ease-in-out, transform .3s ease-in-out;
+        margin-bottom: 5px;
 
         // .social-list__url-item_facebook
 
