--- a/students/kukuruza_maxim/13_scss/src/css/style.scss
+++ b/students/kukuruza_maxim/13_scss/src/css/style.scss
@@ -37,14 +37,24 @@ p {
 
 .row {
     display: flex;
+    gap: 85px;
+
 }
 
 .col-6 {
     display: flex;
     flex-direction: column;
     width: 50%;
+
+    &:first-of-type {
+        border-right: 1px solid $gold;
+    }
 }
 
+.content {
+    max-width: 1200px;
+    margin: auto;
+}
 
 // header
 header {
@@ -109,11 +119,11 @@ h4 {
         content: "";
         display: block;
         position: absolute;
-        left: 22%;
+        left: 35%;
         z-index: 1;
         top: 295px;
         width: 230px;
-        height: 440px;
+        height: 460px;
         background-color: white;
     }
 
@@ -121,11 +131,11 @@ h4 {
         content: "";
         display: block;
         position: absolute;
-        left: 17%;
+        left: 31%;
         z-index: 1;
-        top: 380px;
+        top: 400px;
         height: 230px;
-        width: 440px;
+        width: 460px;
         background-color: white;
     }
 }
