--- a/students/motkaliuk_andrii/14_vector_graphics/src/css/footer/_links.scss
+++ b/students/motkaliuk_andrii/14_vector_graphics/src/css/footer/_links.scss
@@ -10,8 +10,8 @@
 
 .quick-links_item:first-child,
 .legal-stuff_item:first-child,
-.quick-links>ul,
-.legal-stuff>ul {
+.quick-links_block ul,
+.legal-stuff_block ul {
     padding-top: 20px;
 }
 
