--- a/students/motkaliuk_andrii/14_vector_graphics/src/css/_mixins.scss
+++ b/students/motkaliuk_andrii/14_vector_graphics/src/css/_mixins.scss
@@ -77,7 +77,7 @@
     .container {
         max-width: $default-width;
         margin: 0 auto;
-        padding: 0 $gap;
+        padding: 15px $gap;
     }
 }
 
