--- a/students/motkaliuk_andrii/14_vector_graphics/src/css/header/_buttons.scss
+++ b/students/motkaliuk_andrii/14_vector_graphics/src/css/header/_buttons.scss
@@ -3,25 +3,17 @@
     justify-content: end;
 }
 
-.sign-in {
-    display: inline-block;
-
-    &_button {
-        color: $black-color;
-        background-color: $white-color;
-        border: 1px solid $blue-color;
-        padding: 13px 25px;
-    }
+.sign-in_button {
+    color: $black-color;
+    background-color: $white-color;
+    border: 1px solid $blue-color;
+    padding: 13px 25px;
 }
 
-.sign-up {
-    display: inline-block;
-    padding-left: 32px;
-
-    &_button {
-        color: $white-color;
-        background-color: $orange-color;
-        border: 1px solid $orange-color;
-        padding: 13px 25px;
-    }
+.sign-up_button {
+    color: $white-color;
+    background-color: $orange-color;
+    border: 1px solid $orange-color;
+    padding: 13px 25px;
+    margin-left: 32px;
 }
