--- a/students/kukuruza_maxim/14_mix/src/css/style.scss
+++ b/students/kukuruza_maxim/14_mix/src/css/style.scss
@@ -1,4 +1,6 @@
+@import "./reset";
 @import "./variables";
+@import "./extend";
 @import "./mixins";
 @import "./global";
-@import "./header/header";
+@import "./productly";
