--- a/students/dunaieva_alona/14_mixins-extend/src/css/_variables.scss
+++ b/students/dunaieva_alona/14_mixins-extend/src/css/_variables.scss
@@ -2,20 +2,16 @@
 $color-orange: #FF9900;
 $color-title: #2F281E;
 $color-text: #544837;
-$color-btn-text: #FFFFFF;
+$color-link-text: #FFF;
+$color-bg-body: #FFF;
+$color-border: #BCD0E5;
 $default-text-color: $color-text;
 
 // fonts
-$fallback: Arial,
-    Helvetica,
-    sans-serif;
-$default-font-name: 'Montserrat;';
-$main-font: $default-font-name,
-    $fallback;
-$title-font: 'Roboto',
-    $fallback;
-$btn-font: 'Open Sans',
-    $fallback;
+$fallback: Arial, Helvetica, sans-serif;
+$default-font-name: 'Montserrat';
+$main-font: $default-font-name, $fallback;
+$secondary-font: 'Poppins', $fallback;
 $font-path: './fonts/';
 
 //font-size
@@ -23,6 +19,7 @@ $size-menu: 16px;
 $size-h1: 44px;
 $size-h2: 36px;
 $size-h3: 22px;
+$size-h4: 20px;
 $size-text: 16px;
 $default-font-size: $size-text;
 
