--- a/students/dunaieva_alona/14_mixins-extend/src/css/style.scss
+++ b/students/dunaieva_alona/14_mixins-extend/src/css/style.scss
@@ -5,3 +5,9 @@
 @import "global";
 @import "extend";
 @import "header";
+@import "sections/hero";
+@import "sections/tools";
+@import "sections/design";
+@import "sections/managers";
+@import "sections/marketers";
+@import "footer";
