--- a/students/dunaieva_alona/14_mixins-extend/src/css/_extend.scss
+++ b/students/dunaieva_alona/14_mixins-extend/src/css/_extend.scss
@@ -1,11 +1,4 @@
-%flex-jsc {
-    display: flex;
-    justify-content: space-between;
-}
-
-%posfix-center {
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+%opasity {
+    opacity: 0.4;
+    transition: 0.3s ease-in-out;
 }
