--- a/students/dunaieva_alona/14_mixins-extend/src/css/_global.scss
+++ b/students/dunaieva_alona/14_mixins-extend/src/css/_global.scss
@@ -1,5 +1,59 @@
+@include font-face('montserrat-v25-latin-regular');
+@include font-face('montserrat-v25-latin-500', 500);
+@include font-face('montserrat-v25-latin-600', 600);
+@include font-face('montserrat-v25-latin-700', 700);
+@include font-face('poppins-v20-latin-700', 700);
+
+body {
+    font-family: $main-font;
+    background-color: $color-bg-body;
+    font-weight: 500;
+    line-height: 26px;
+}
+
+img {
+    max-width: 100%;
+}
+
 .container {
     max-width: 1200px;
     box-sizing: border-box;
     margin: 0 auto;
+}
+
+h1 {
+    font-size: $size-h1;
+    font-weight: 700;
+    line-height: 54px;
+    padding-bottom: 30px;
+
+}
+
+h2 {
+    @include h2;
+}
+
+h3 {
+    @include h3;
+}
+
+h4 {
+    @include h4;
+}
+
+.row {
+    @include flex-jsc-al(space-between, center);
+}
+
+.col-6 {
+    width: 50%;
+
+}
+
+.col-4 {
+    width: calc(100% / 4);
+}
+
+.col-3 {
+    width: calc(100% / 3);
 }
