--- a/students/tiselko_iryna/class_works/15_forms/src/css/_global.scss
+++ b/students/tiselko_iryna/class_works/15_forms/src/css/_global.scss
@@ -2,6 +2,8 @@
 
 @include font-face('roboto-v30-latin-500' 500);
 
+@include grid;
+
 body {
     font-family: $main-font;
     background-color: $default-body-color;
