--- a/students/tiselko_iryna/class_works/15_forms/src/css/_variables.scss
+++ b/students/tiselko_iryna/class_works/15_forms/src/css/_variables.scss
@@ -3,7 +3,7 @@ $orang-color: #f76707;
 $white-color: #fff;
 $gray-3-color: #dee2e6;
 $gray-6-color: #868e96;
-$grey-7-color: #495057;
+$gray-7-color: #495057;
 $gray-8-color: #343a40;
 $green-color: green;
 
