--- a/students/tiselko_iryna/class_works/15_forms/src/css/_form-control.scss
+++ b/students/tiselko_iryna/class_works/15_forms/src/css/_form-control.scss
@@ -9,6 +9,7 @@ $icon-width: $icon-height;
 $icon-img-size: math.div($input-height, 2);
 
 
+
 .form-control {
 
     // .form-control_required
@@ -35,6 +36,10 @@ $icon-img-size: math.div($input-height, 2);
 
     &__group {
         display: flex;
+
+        &_right {
+            flex-direction: row-reverse;
+        }
     }
 
     // .form-control__input
@@ -54,10 +59,11 @@ $icon-img-size: math.div($input-height, 2);
     padding: 0 10px;
     height: $input-height;
     border: none;
+    width: calc(100% - $icon-width);
 }
 
 .icon {
-    width: input-height;
+    width: $input-height;
     height: $icon-height;
     background: $icon-bg;
     display: flex;
