--- a/students/tiselko_iryna/class_works/16_forms_cust/src/css/_form-control.scss
+++ b/students/tiselko_iryna/class_works/16_forms_cust/src/css/_form-control.scss
@@ -8,6 +8,7 @@ $icon-height: $input-height;
 $icon-width: $icon-height;
 $icon-img-size: math.div($input-height, 2);
 $icon-focus-color: $orang-color;
+$icon-valid-color: $green-color;
 
 
 .main-title {
@@ -59,6 +60,12 @@ $icon-focus-color: $orang-color;
     &:focus+.icon {
         .icon__img {
             fill: $icon-focus-color;
+        }
+    }
+
+    &[name="first_name"]:valid+.icon {
+        .icon__img {
+            fill: $icon-valid-color;
         }
     }
 }
