--- a/students/motkaliuk_andrii/16_form_style/src/css/style.scss
+++ b/students/motkaliuk_andrii/16_form_style/src/css/style.scss
@@ -1,7 +1,7 @@
 @use 'sass:math';
+@import "./reset";
 @import "./variables";
 @import "./mixins";
 @import "./global";
 @import "./extend";
-@import "./form-control";
-@import "./social-list";
+@import "./form";
